[gd_scene load_steps=4 format=3 uid="uid://cuokuu6chraw8"]

[ext_resource type="Script" path="res://Scripts/mapas/GraphNode.gd" id="1"]
[ext_resource type="Theme" uid="uid://ca4khmk8p1pma" path="res://mapas/theme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 25.0
content_margin_top = 27.0
content_margin_right = 25.0
content_margin_bottom = 3.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 2
border_width_top = 24
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.407843, 0.407843, 0.407843, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="GraphNode" type="GraphNode"]
offset_right = 289.0
offset_bottom = 219.0
scale = Vector2(1.00564, 1)
size_flags_vertical = 3
theme = ExtResource("2")
theme_override_constants/port_offset = 0
theme_override_styles/frame = SubResource("1")
theme_override_styles/selected_frame = SubResource("1")
title = "Title"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
wrap_mode = 1

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="gui_input" from="." to="." method="_on_GraphNode_gui_input"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="focus_entered" from="TextEdit" to="." method="_on_TextEdit_focus_entered"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
